# Qt-Creator-C-Threads

./: CMakeLists.txt  main.cpp
